changes done to show login page

--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,47 @@
 <html>
   <head>
     <title>Local Http Server </title>
+     	<link rel="stylesheet" href="assets/vendor.css">
+    	<link rel="stylesheet" href="assets/app.css">
   </head>
   <body>
-    This page is served by local http server
-	<br>
-    <a href="/share">Click here to open share folder</a>
-  </body>
+    <body class="ember-application" contenteditable="false">
+		<div id="ember487" class="ember-view">
+			<div id="ember506" class="ember-view">        
+				<div class="background">
+				    <img src="assets/images/login-wallpaper.jpg">
+				</div>
+				<div class="container-fluid" id="login-container">
+				    <div class="row">
+				        <div id="ember515" class="ember-view">
+					        <div class="login-container">
+							    <div class="header-container text-center">
+							        <h2 class="workbench-title"><img class="login-logo" src="assets/images/logo.png"> <span class="title-green">Supervisory Dashboard</span></h2>
+							    </div>
+								<form class="login-form">
+							        <div class="input-group ">
+							            <span class="input-group-addon">
+							                <i class="glyphicon glyphicon-user" style="width: 20px"></i>
+							            </span>
+							            <input id="ember524" placeholder="Username" type="text" class="form-control user-name ember-view ember-text-field">
+							            <span class="login-focus-helper"></span>
+							        </div>
+							        <div class="input-group ">
+							            <span class="input-group-addon">
+							                <i class="glyphicon glyphicon-lock" style="width: 20px"></i>
+							            </span>
+							            <input id="ember525" placeholder="Password" type="password" class="form-control password ember-view ember-text-field">
+							            <span class="login-focus-helper"></span>
+							        </div>
+							        <button id="ember536" type="button" class="btn btn-success btn-lg login-button ember-view async-button default">  Log In
+									</button>
+							    </form>
+							</div>
+						</div>
+				    </div>
+				</div>
+				<div id="ember549" class="ember-view alert alert- active hide"></div>
+			</div>
+		</div>
+	</body>
 </html>
