--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 							    <div class="header-container text-center">
 							        <h2 class="workbench-title"><img class="login-logo" src="assets/images/logo.png"> <span class="title-green">Supervisory Dashboard</span></h2>
 							    </div>
-								<form class="login-form">
+								<form class="login-form" action="home/landing_page.html">
 							        <div class="input-group ">
 							            <span class="input-group-addon">
 							                <i class="glyphicon glyphicon-user" style="width: 20px"></i>
@@ -44,5 +44,6 @@
 			</div>
 		</div>
 	</body>
+	<script type="text/javascript" src="assets/vendor.js"></script>
 	<script type="text/javascript" src="assets/app.js"></script>
 </html>
