added test case for valid credentials

--- a/app/home/landing_page.html
+++ b/app/home/landing_page.html
@@ -4,6 +4,6 @@
     	<title>Home</title>
     </head>
     <body>
-    	Login successful.
+    	<div class="home-cucumeber-test">Login successful.</div>
     </body>
 </html>
