--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,6 @@
   <body>
     This page is served by local http server
   <br>
-    <a href="/assets">Click here to open share folder</a>
+    <a href="/assets">Click here</a>
   </body>
 </html>
